<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/tableRow"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/letterTextView"
        android:layout_width="100dp"
...
        android:hint="99"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/letterTextView"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/deleteGridValueButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#00000000"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_delete_black_24dp" />

    <ImageButton
        android:id="@+id/editGridValueButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#0000"
        app:layout_constraintEnd_toStartOf="@+id/deleteGridValueButton"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_edit_black_24dp" />
...
